Update scss variables
Update color pallet and add resolutions variables

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,6 @@
 // pallet
 $black: #222323;
+$gray: #555568;
 $white: #f0f6f0;
 $red: #670909;
 $green: #38e54d;
@@ -10,3 +11,8 @@ $game-height: 600px;
 $game-width: 600px;
 $game-min-height: 300px;
 $game-min-width: 300px;
+
+// resolutions
+$max-resolution: 651px;
+$medium-resolution: 501px;
+$min-resolution: 351px;
