--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -27,8 +27,15 @@
 
         box-sizing: border-box;
 
+        background-color: $black;
+
         &--hidden {
             display: none;
+        }
+
+        &--welcome-interface {
+            justify-content: space-evenly;
+            padding: 30px 0;
         }
 
         &--loading-interface {
@@ -53,6 +60,11 @@
         }
     }
 
+    &__banner {
+        font-size: 2em;
+        font-family: "Roboto Slab", serif;
+    }
+
     &__menu {
         display: flex;
         flex-direction: column;
@@ -72,7 +84,7 @@
     transition: transform 0.2s ease-in-out;
 
     &:hover {
-        transform: scale(1.2);
+        transform: scale(1.1);
     }
 }
 
@@ -139,6 +151,7 @@
     }
 
     &__banner {
+        align-self: center;
         margin-bottom: 20px;
         font-size: 2em;
         font-family: "Roboto Slab", serif;
@@ -152,7 +165,6 @@
 
     &__statistics {
         align-self: stretch;
-        max-width: $game-min-width;
 
         display: flex;
         flex-direction: column;
@@ -167,8 +179,8 @@
         font-family: "Montserrat", sans-serif;
     }
 
-    &__actions {
-    }
+    // &__actions {
+    // }
 }
 
 .statistic-list {
@@ -176,8 +188,8 @@
     padding-inline-start: 0;
     margin: 0;
 
-    &__item {
-    }
+    // &__item {
+    // }
 }
 
 .lds-circle {
