Fix error with no auto-upload current progress
Fix logic of Welcome Page (buttons start & continue) begins with first step
and add auto-upload current save

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -83,6 +83,10 @@
 
     transition: transform 0.2s ease-in-out;
 
+    &--hidden {
+        display: none;
+    }
+
     &:hover {
         transform: scale(1.1);
     }
