--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -14,7 +14,7 @@ body {
     min-height: 100vh;
     min-width: 100vw;
 
-    font-size: clamp(15px, 4vmin, 21px);
+    font-size: clamp(15px, calc(min($game-height, 100vmin) * 0.03), 21px);
 
     & * {
         box-sizing: border-box;
